--- a/vue-map-demo/package.json
+++ b/vue-map-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleme",
+  "name": "vue-map-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
-    "stylus": "^0.59.0",
-    "vue": "^3.2.37",
-    "vue-router": "4.1.5"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
